[package]
name = "cuchas_bevy01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.11", features = ["dynamic_linking", "wav"] }
rand = "0.8.5"
bevy-ui-navigation = "0.28.0"
image = "*"
winit = "0.28.6"

[build-dependencies]
embed-resource = "1.6.3"